cluster/apps/services/grocy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: services
  labels:
    app.kubernetes.io/name: grocy
  annotations:
    kompose.cmd: kompose convert -n services -f docker-compose.yml --service-group-mode label
    kompose.controller.type: Deployment
    kompose.service.expose: grocy.seawolf.hermleigh.home, grocy.seawolf
    kompose.service.expose.tls-secret: grocy-tls-ingress
    kompose.service.group: grocy
    kompose.service.type: ClusterIP
    kompose.version: 1.30.0 (9d8dcb518)
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
      annotations:
        kompose.cmd: kompose convert -n services -f docker-compose.yml --service-group-mode label
        kompose.service.expose: "false"
        kompose.service.group: grocy
        kompose.version: 1.30.0 (9d8dcb518)
    spec:
      containers:
        - name: grocy-frontend
          image: docker.io/grocy/frontend:v4.0.3
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 80m
              memory: 256Mi
            limits:
              cpu: 220m
              memory: 512Mi
          volumeMounts:
            - mountPath: /tmp
              name: grocy-tmpfs0
        - name: grocy-backend
          image: docker.io/grocy/backend:v4.0.3
          ports:
            - name: web
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 80m
              memory: 256Mi
            limits:
              cpu: 220m
              memory: 512Mi
          volumeMounts:
            - name: grocy
              mountPath: /var/www/data
            - mountPath: /var/www/data/viewcache
              name: grocy-tmpfs1
            - mountPath: /tmp
              name: grocy-tmpfs0
        - name: barcodebuddy
          image: docker.io/f0rc3/barcodebuddy:latest
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
            - name: tls
              containerPort: 443
              protocol: TCP
          resources:
            requests:
              cpu: 80m
              memory: 256Mi
            limits:
              cpu: 220m
              memory: 512Mi
          volumeMounts:
            - name: barcode-buddy
              mountPath: /config/barcodebuddy
      volumes:
        - name: grocy
          persistentVolumeClaim:
            claimName: grocy
        - name: barcode-buddy
          persistentVolumeClaim:
            claimName: barcode-buddy
        - name: grocy-tmpfs0
          emptyDir: &tempfs
            medium: Memory
            sizeLimit: 128Mi
        - name: grocy-tmpfs1
          emptyDir: *tempfs
      hostAliases:
        - ip: 127.0.0.1
          hostname: backend
