cluster/apps/services/grocy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: services
  labels:
    app.kubernetes.io/name: grocy
spec:
  selector:
    app.kubernetes.io/name: grocy
  ports:
    - name: grocy-web
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: barcode-buddy-web
      port: 81
      targetPort: 80
      protocol: TCP
  type: ClusterIP
