cluster/apps/services/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Apps & Services"
    gethomepage.dev/icon: grocy.png
    gethomepage.dev/description: "ERP beyond your Fridge"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-Preferred-Username
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.sso.hermleigh.home/oauth2/start?rd=$scheme://$best_http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.sso.hermleigh.home/oauth2/auth
  labels:
    app.kubernetes.io/name: grocy
spec:
  ingressClassName: nginx
  rules:
  - host: grocy.hermleigh.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocy
            port:
              number: 8080
  tls:
    - hosts:
      - grocy.hermleigh.home
      - grocy
      secretName: grocy-ingress-cert
